fix: ChatLog answer 컬럼을 TEXT 타입으로 변경
- 데이터베이스 스키마 변경: answer VARCHAR(255) -> TEXT
- ChatGPT 응답이 길어도 저장 가능하도록 개선
- Entity 클래스에 columnDefinition = 'TEXT' 추가